# Chip8-in-Rust

./: Cargo.toml
src/: lib.rs
src/core/: Address.rs  Chip8.rs  Configuration.rs  Cpu.rs  CpuDependencies.rs  CpuVariantInstructions.rs  CpuVariants.rs  Display.rs  Font.rs  Keyboard.rs  Memory.rs  Registers.rs  Stack.rs  Timers.rs
src/tests/: AddressTest.rs  Chip8Test.rs  CpuTest.rs  CpuVariantInstructionsTest.rs  DisplayTest.rs  FontTest.rs  KeyboardTest.rs  MemoryTest.rs  RegisterTest.rs  StackTest.rs  TimersTest.rs  cpu_dependencies_test.rs  mod.rs
src/wasm/: WasmChip8.rs
src/wasm/js/: EventHandler.js  config.js  custom_js_output.js  frontend.js  miscellaneous.js
src/wasm/js/Backend/: Backend.js  GameLoop.js
src/wasm/js/frontend/: DataHandler.js  Display.js  Keyboard.js  Resize.js  Sound.js
src/wasm/js/tests/: frontend_tests.js
